--- a/.github/workflows/terraform-azure-datadog.yml
+++ b/.github/workflows/terraform-azure-datadog.yml
@@ -26,6 +26,12 @@ jobs:
     steps:
       - name: "Checkout Repository"
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+          path: terraform
+
+      - name: "Debug: List Files"
+        run: ls -la terraform
 
       - name: "Set up Terraform"
         uses: hashicorp/setup-terraform@v2
@@ -33,22 +39,26 @@ jobs:
           terraform_version: 1.6.0
 
       - name: "Terraform Init"
+        working-directory: terraform
         run: terraform init
 
       - name: "Terraform Format Check"
+        working-directory: terraform
         run: terraform fmt -check
 
       - name: "Terraform Validate"
+        working-directory: terraform
         run: terraform validate
 
       - name: "Terraform Plan"
+        working-directory: terraform
         run: terraform plan -out=tfplan
 
       - name: "Upload Terraform Plan"
         uses: actions/upload-artifact@v4
         with:
           name: tfplan
-          path: tfplan
+          path: terraform/tfplan
 
   terraform-apply:
     name: "Terraform Apply"
@@ -66,33 +76,16 @@ jobs:
     steps:
       - name: "Checkout Repository"
         uses: actions/checkout@v4
-
-      - name: "Set up Terraform"
-        uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.6.0
+          fetch-depth: 1
+          path: terraform
 
       - name: "Download Terraform Plan"
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: tfplan
+          path: terraform
 
       - name: "Terraform Apply"
+        working-directory: terraform
         run: terraform apply -auto-approve tfplan
-
-  datadog_monitoring:
-    name: "Configure Datadog"
-    runs-on: ubuntu-latest
-    needs: terraform-apply
-    if: github.event_name == 'push'
-
-    steps:
-      - name: "Checkout Repository"
-        uses: actions/checkout@v4
-
-      - name: "Set up Datadog Agent"
-        run: |
-          DD_AGENT_MAJOR_VERSION=7 DD_API_KEY=${{ secrets.DATADOG_API_KEY }} DD_SITE="datadoghq.com" bash -c "$(curl -L https://s3.amazonaws.com/dd-agent/scripts/install_script.sh)"
-
-      - name: "Verify Datadog Integration"
-        run: sudo datadog-agent status
