--- a/.github/workflows/terraform-azure-datadog.yml
+++ b/.github/workflows/terraform-azure-datadog.yml
@@ -27,11 +27,10 @@ jobs:
       - name: "Checkout Repository"
         uses: actions/checkout@v4
         with:
-          fetch-depth: 1
-          path: terraform
+          fetch-depth: 1 # ✅ Remove "path: terraform" to checkout in default directory
 
       - name: "Debug: List Files"
-        run: ls -la terraform
+        run: ls -la
 
       - name: "Set up Terraform"
         uses: hashicorp/setup-terraform@v2
@@ -39,26 +38,22 @@ jobs:
           terraform_version: 1.6.0
 
       - name: "Terraform Init"
-        working-directory: terraform
         run: terraform init
 
       - name: "Terraform Format Check"
-        working-directory: terraform
         run: terraform fmt -check
 
       - name: "Terraform Validate"
-        working-directory: terraform
         run: terraform validate
 
       - name: "Terraform Plan"
-        working-directory: terraform
         run: terraform plan -out=tfplan
 
       - name: "Upload Terraform Plan"
         uses: actions/upload-artifact@v4
         with:
           name: tfplan
-          path: terraform/tfplan
+          path: tfplan
 
   terraform-apply:
     name: "Terraform Apply"
