--- a/.github/workflows/terraform-azure-datadog.yml
+++ b/.github/workflows/terraform-azure-datadog.yml
@@ -30,7 +30,7 @@ jobs:
           fetch-depth: 1 # ✅ Remove "path: terraform" to checkout in default directory
 
       - name: "Debug: List Files"
-        run: ls -la
+        run: ls -la terraform
 
       - name: "Set up Terraform"
         uses: hashicorp/setup-terraform@v2
@@ -53,7 +53,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: tfplan
-          path: tfplan
+          path: terraform
 
   terraform-apply:
     name: "Terraform Apply"
