--- a/.github/workflows/terraform-azure-datadog.yml
+++ b/.github/workflows/terraform-azure-datadog.yml
@@ -63,7 +63,13 @@ jobs:
       # 7. Generate a plan and store it in tfplan
       - name: "Terraform Plan"
         working-directory: terraform
-        run: terraform plan -out=tfplan
+        run: terraform plan \
+          -out=tfplan \
+          -var="datadog_api_key=${{ env.DATADOG_API_KEY }}" \
+          -var="datadog_app_key=${{ env.DATADOG_APP_KEY }}"
+        env:
+          DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY }}
+          DATADOG_APP_KEY: ${{ secrets.DATADOG_APP_KEY }}
 
       # 8. Upload the plan artifact so the apply step can download it
       - name: "Upload Terraform Plan"
@@ -105,4 +111,10 @@ jobs:
       # 3. Apply the plan
       - name: "Terraform Apply"
         working-directory: terraform
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply \
+          -auto-approve tfplan \
+          -var="datadog_api_key=${{ env.DATADOG_API_KEY }}" \
+          -var="datadog_app_key=${{ env.DATADOG_APP_KEY }}"
+        env:
+          DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY }}
+          DATADOG_APP_KEY: ${{ secrets.DATADOG_APP_KEY }}
