--- a/.github/workflows/terraform-azure-datadog.yml
+++ b/.github/workflows/terraform-azure-datadog.yml
@@ -102,7 +102,7 @@ jobs:
       - name: "Set up Terraform"
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.6.0 # Make sure this matches your Terraform version
+          terraform_version: 1.6.0 # Ensure version matches terraform-plan job
 
       # 3. Download the previously uploaded plan artifact
       - name: "Download Terraform Plan"
@@ -111,7 +111,12 @@ jobs:
           name: tfplan
           path: terraform
 
-      # 4. Apply the plan
+      # 4. Initialize Terraform (Fixes missing providers)
+      - name: "Terraform Init"
+        working-directory: terraform
+        run: terraform init
+
+      # 5. Apply the plan
       - name: "Terraform Apply"
         working-directory: terraform
         env:
